Adding and fixing
- Adding libs.versions.toml
- Fix E2E tests
- Fix deserialization bugs
- Enhanced jackson tests